--- a/html/bts.html
+++ b/html/bts.html
@@ -1,48 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS -->
-    <link rel="stylesheet" href="../css/common.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!-- Javascript -->
-    <link rel="stylesheet" href="../js/common.js">
-    <title>Acceuil</title>
-</head>
-<body>
-    <nav id='menu' class="menuBack menuScroll">
-        <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
-        <ul>
-            <li><a href='../html/acceuil.html'>Acceuil</a></li>
-            <li><a href='../html/profil.html'>Mon profil</a></li>
-            <li><a href='../html/bts.html'>BTS SIO</a></li>
-            <li><a class='dropdown-arrow' href='../html/veille.html'>Veilles</a>
-            <ul class='sub-menus'>
-                <!-- <li><a href=''></a></li> -->
-                <li><a href=''></a></li>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- CSS -->
+        <link rel="stylesheet" href="../css/common.css">
+        <link rel="stylesheet" href="../css/bts.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <!-- Javascript -->
+        <link rel="stylesheet" href="../js/common.js">
+        <title>Acceuil</title>
+    </head>
+    <body>
+        <nav id='menu' class="menuBack menuScroll">
+            <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
+            <ul>
+                <li><a href='../html/acceuil.html'>Acceuil</a></li>
+                <li><a href='../html/profil.html'>Mon profil</a></li>
+                <li><a href='../html/bts.html'>BTS SIO</a></li>
+                <li><a class='dropdown-arrow' href='../html/veille.html'>Veilles</a>
+                <ul class='sub-menus'>
+                    <!-- <li><a href=''></a></li> -->
+                    <li><a href=''></a></li>
+                </ul>
+                </li>
+                <li><a class='dropdown-arrow' href='../html/projet.html'>Projets</a>
+                <ul class='sub-menus'>
+                    <li><a href=''></a></li>
+                    <li><a href=''></a></li>
+                </ul>
+                </li>
+                <li><a href='../html/apprentissage.html'>Apprentissage</a></li>
+                <li><a href='../html/tableau.html'>Tableau de synthèse</a></li>
             </ul>
-            </li>
-            <li><a class='dropdown-arrow' href='../html/projet.html'>Projets</a>
-            <ul class='sub-menus'>
-                <li><a href=''></a></li>
-                <li><a href=''></a></li>
-            </ul>
-            </li>
-            <li><a href='../html/apprentissage.html'>Apprentissage</a></li>
-            <li><a href='../html/tableau.html'>Tableau de synthèse</a></li>
-        </ul>
-        <div class="d-flex justify-content-end">
-            <a href="https://github.com/L-Paillet" crossorigin="anonymous">
-                <img src="../asset/github.png" alt="portfolio-github" srcset="" class="logoGit">
-            </a>
-            <a href="https://www.linkedin.com/in/laura-paillet-669889223/"  crossorigin="anonymous">
-                <img src="../asset/linkedinLogo.png" alt="portfolio-linkedin" srcset="" class="logoDin">
-            </a>
+            <div class="d-flex justify-content-end">
+                <a href="https://github.com/L-Paillet" crossorigin="anonymous">
+                    <img src="../asset/github.png" alt="portfolio-github" srcset="" class="logoGit">
+                </a>
+                <a href="https://www.linkedin.com/in/laura-paillet-669889223/"  crossorigin="anonymous">
+                    <img src="../asset/linkedinLogo.png" alt="portfolio-linkedin" srcset="" class="logoDin">
+                </a>
+            </div>
+        </nav>
+
+        <div class="griddy">
+            <div class="parent">
+                <div class="d-flex justify-content-center presentationTitre">
+                    <h2>Qu'est-ce que le BTS SIO</h2>
+                </div>
+
+                <div class="btsText"> 
+                    <div class="d-flex justify-content-center textChild">
+                        <h3 class="btsTitre">
+                            BTS SIO
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi totam minima in rem, 
+                            similique architecto adipisci expedita. 
+                            Qui doloremque commodi dicta eum ut libero aliquam soluta excepturi similique, 
+                            quod aspernatur.
+                        </p>
+                        <h3 class="btsTitre">
+                            Enseignement général du BTS SIO
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam praesentium pariatur tempore maiores modi! 
+                            Fugit cumque aut suscipit repellat esse doloremque optio distinctio enim adipisci harum alias excepturi, quasi aliquam!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="optionSLAM">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Sunt deleniti ab reprehenderit autem vitae ad unde dolores nostrum tenetur nisi rem vel aliquid voluptatum aliquam, 
+                        eaque exercitationem perspiciatis ut iusto.
+                    </p>
+                </div>
+
+                <div class="optionSISR">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis vero, aut expedita asperiores voluptatem, 
+                        modi nihil exercitationem porro quos, aliquid possimus accusamus nemo eum iure in. Sit id quibusdam ex.
+                    </p>
+                </div>
+            </div>
         </div>
-    </nav>
-    <div>
-    </div>
-</body>
+    </body>
 </html>
