--- a/html/bts.html
+++ b/html/bts.html
@@ -43,23 +43,21 @@
                 </a>
             </div>
         </nav>
-
+<!-- grid présentation BTS -->
         <div class="griddy">
             <div class="parent">
+                <!-- titre -->
                 <div class="d-flex justify-content-center presentationTitre">
-                    <h2>Qu'est-ce que le BTS SIO</h2>
+                    <h2>Qu'est-ce qu'un BTS SIO</h2>
                 </div>
-
+                <!-- text présentation général -->
                 <div class="btsText"> 
                     <div class="d-flex justify-content-center textChild">
                         <h3 class="btsTitre">
                             BTS SIO
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi totam minima in rem, 
-                            similique architecto adipisci expedita. 
-                            Qui doloremque commodi dicta eum ut libero aliquam soluta excepturi similique, 
-                            quod aspernatur.
+                            Le BTS Services informatiques aux Organisations est un diplôme reconnu par l’état de niveau Bac+2.
                         </p>
                         <h3 class="btsTitre">
                             Enseignement général du BTS SIO
