--- a/html/bts.html
+++ b/html/bts.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="../js/common.js">
         <title>Acceuil</title>
     </head>
+
     <body>
         <nav id='menu' class="menuBack menuScroll">
             <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
@@ -43,12 +44,14 @@
                 </a>
             </div>
         </nav>
+
 <!-- grid présentation BTS -->
         <div class="griddy">
             <div class="parent">
                 <!-- titre -->
                 <div class="d-flex justify-content-center presentationTitre">
                     <h2>Qu'est-ce qu'un BTS SIO</h2>
+                    <hr class="prettyLine">
                 </div>
                 <!-- text présentation général -->
                 <div class="btsText"> 
@@ -68,7 +71,7 @@
                         </p>
                     </div>
                 </div>
-
+                <!-- option SLAM -->
                 <div class="optionSLAM">
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -77,13 +80,19 @@
                     </p>
                 </div>
 
+                <!-- option SISR -->
                 <div class="optionSISR">
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis vero, aut expedita asperiores voluptatem, 
                         modi nihil exercitationem porro quos, aliquid possimus accusamus nemo eum iure in. Sit id quibusdam ex.
                     </p>
                 </div>
+
             </div>
         </div>
     </body>
+
+    <footer class="d-flex justify-content-center prettyFooter">
+        <p>© Copyright Laura Paillet. Tous Droits Réservés</p>
+    </footer>
 </html>
