--- a/html/acceuil.html
+++ b/html/acceuil.html
@@ -20,21 +20,11 @@
                 <li><a href='../html/acceuil.html'>Acceuil</a></li>
                 <li><a href='../html/profil.html'>Mon profil</a></li>
                 <li><a href='../html/bts.html'>BTS SIO</a></li>
-                <li><a class='dropdown-arrow' href='../html/veille.html'>Veilles</a>
-                <ul class='sub-menus'>
-                    <!-- <li><a href=''></a></li> -->
-                    <li><a href=''></a></li>
-                </ul>
-                </li>
-                <li><a class='dropdown-arrow' href='../html/projet.html'>Projets</a>
-                <ul class='sub-menus'>
-                    <li><a href=''></a></li>
-                    <li><a href=''></a></li>
-                </ul>
-                </li>
-                <li><a href='../html/apprentissage.html'>Apprentissage</a></li>
+                <li><a href='../html/veille.html'>Veilles</a>
+                <li><a href='../html/projet.html'>Projet</a>
                 <li><a href='../html/tableau.html'>Tableau de synthèse</a></li>
             </ul>
+            
             <div class="d-flex justify-content-end">
                 <a href="https://github.com/L-Paillet" crossorigin="anonymous">
                     <img src="../asset/github.png" alt="portfolio-github" srcset="" class="logoGit">
