--- a/html/bts.html
+++ b/html/bts.html
@@ -40,11 +40,11 @@
         <div class="parent">
             <div class="btsText">
                     <div class="d-flex justify-content-center textChild">
-                        <h3>
-                            BTS SIO
-                        </h3>
+                        <h1>
+                            Qu'est-ce que le BTS SIO
+                        </h1>
                         <!-- <hr> -->
-                        <p>
+                        <p class="ajustementText">
                             Le BTS Services informatiques aux Organisations (SIO) est un diplôme reconnu par l’état de niveau Bac+2.
                             <br> 
                             Il comporte deux option permettant de se spécialiser: 
@@ -65,7 +65,7 @@
                 </div>
             </div>
                 <div class="optionSLAM">
-                    <h1 class="d-flex justify-content-center">Option SLAM</h1>
+                    <h3 class="d-flex justify-content-center">Option SLAM</h3>
                     <p>
                         L’option SLAM est destinée aux étudiants qui s’orientent vers les métiers liés à la conception et la maintenance de programmes applicatifs. 
                         Grâce à des cours spécifiques, les diplômés seront capables de gérer un parc informatique ou d’administrer un réseau au sein d’une entreprise. 
@@ -73,7 +73,7 @@
                     </p>
             </div>
             <div class="optionSISR">
-                <h1 class="d-flex justify-content-center">Option SISR</h1>
+                <h3 class="d-flex justify-content-center">Option SISR</h3>
                     <p>
                         L’option SISR est destinée aux étudiants qui s’orientent vers les métiers liés à la conception et la maintenance d’infrastructures réseaux. 
                         Assurer la sécurité, la maintenance et l’installation des réseaux et des équipements informatiques font partie des principales missions des futurs administrateurs, 
