--- a/html/projet.html
+++ b/html/projet.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- CSS -->
         <link rel="stylesheet" href="../css/common.css">
+        <link rel="stylesheet" href="../css/projet.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <!-- Javascript -->
         <link rel="stylesheet" href="../js/common.js">
@@ -34,7 +35,15 @@
             </div>
         </nav>
         
-        <div>
+        <div class="projet">
+            <!-- <div className="container">
+                <div className="teamUn">
+                    <p>Titre</p>
+                </div>
+                <div className="teamDeux">
+                    <p>Titre2</p>
+                </div>
+            </div> -->
         </div>
     </body>
 
