--- a/html/veille.html
+++ b/html/veille.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- CSS -->
         <link rel="stylesheet" href="../css/common.css">
+        <link rel="stylesheet" href="../css/veille.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <!-- Javascript -->
         <link rel="stylesheet" href="../js/common.js">
@@ -33,7 +34,16 @@
                 </a>
             </div>
         </nav>
-        <div>
+
+        <div class="veille">
+            <h1>Qu'est-ce que la veille technologique ?</h1>
+            <p class="presentationVeille">
+                La veille technologique désigne l’ensemble des moyens déployés pour collecter, 
+                soumettre à analyse et exploiter les nouveautés disponibles sur le plan technique, dans un secteur déterminés.
+                Elle comprend notamment la surveillance, la collecte, 
+                le partage et la diffusion d’information permettant d’anticiper ou de s’informer sur des changements en matière de recherche, 
+                développement, brevet, lancement de nouveaux produits, matériaux, processus, concepts, innovation de fabrication, etc….
+            </p>
         </div>
     </body>
 
