--- a/html/veille.html
+++ b/html/veille.html
@@ -36,16 +36,36 @@
         </nav>
 
         <div class="veille">
-            <h1>Qu'est-ce que la veille technologique ?</h1>
-            <p class="presentationVeille">
-                La veille technologique désigne l’ensemble des moyens déployés pour collecter, 
-                soumettre à analyse et exploiter les nouveautés disponibles sur le plan technique, dans un secteur déterminés.
-                Elle comprend notamment la surveillance, la collecte, 
-                le partage et la diffusion d’information permettant d’anticiper ou de s’informer sur des changements en matière de recherche, 
-                développement, brevet, lancement de nouveaux produits, matériaux, processus, concepts, innovation de fabrication, etc….
-            </p>
+
+            <div class="veilleGlass">
+                <h1>Qu'est-ce que la veille technologique ?</h1>
+                <p>
+                    La veille technologique désigne l’ensemble des moyens déployés pour collecter, 
+                    soumettre à analyse et exploiter les nouveautés disponibles sur le plan technique, dans un secteur déterminés.
+                    Elle comprend notamment la surveillance, la collecte, 
+                    le partage et la diffusion d’information permettant d’anticiper ou de s’informer sur des changements en matière de recherche, 
+                    développement, brevet, lancement de nouveaux produits, matériaux, processus, concepts, innovation de fabrication, etc….
+                </p>
+            </div>
+
+            <div class="veilleGlass adjust">
+                <h1>Sujets de la veille technologique</h1>
+               <p>Pour ma veille j'ai décidé d'approcher les sujets suivants, le framework Angular et (RGPD? / Blockchain?). 
+                J'ai mis en place plusieurs outils pour suivre les informations les plus récentes sur le sujet.</p>
+                <div class="gridOutil">
+                    <div class="outil1">
+                        <div class="nameClass">Google Alert</div>
+                    </div>
+                    <div class="outil2">
+                        <div class="nameClass">Feedly</div>
+                    </div>
+                </div>
+               
+            </div>
+
         </div>
     </body>
+
 
     <footer class="d-flex justify-content-center prettyFooter">
         <p>© Copyright Laura Paillet. Tous Droits Réservés</p>
