--- a/html/bts.html
+++ b/html/bts.html
@@ -38,15 +38,13 @@
 <!-- grid présentation BTS -->
     <div class="griddy">
         <div class="parent">
-            <div class="btsText">
+            <div class="veilleGlass btsText">
                     <div class="d-flex justify-content-center textChild">
                         <h1>
                             Qu'est-ce que le BTS SIO
                         </h1>
-                        <!-- <hr> -->
                         <p class="ajustementText">
                             Le BTS Services informatiques aux Organisations (SIO) est un diplôme reconnu par l’état de niveau Bac+2.
-                            <br> 
                             Il comporte deux option permettant de se spécialiser: 
                             <br>
                             - Solutions Logicielles et Applications Métier (SLAM) 
@@ -64,7 +62,8 @@
                         </p>
                 </div>
             </div>
-                <div class="optionSLAM">
+            <!-- OPTIONS -->
+            <div class=" veilleGlass optionSLAM">
                     <h3 class="d-flex justify-content-center">Option SLAM</h3>
                     <p>
                         L’option SLAM est destinée aux étudiants qui s’orientent vers les métiers liés à la conception et la maintenance de programmes applicatifs. 
@@ -72,7 +71,8 @@
                         Ils pourront également gérer l’intégration, la sécurisation et la configuration des serveurs, mais aussi des postes clients et des équipements d’interconnexion.
                     </p>
             </div>
-            <div class="optionSISR">
+
+            <div class="veilleGlass optionSISR">
                 <h3 class="d-flex justify-content-center">Option SISR</h3>
                     <p>
                         L’option SISR est destinée aux étudiants qui s’orientent vers les métiers liés à la conception et la maintenance d’infrastructures réseaux. 
