--- a/html/tableau.html
+++ b/html/tableau.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- CSS -->
         <link rel="stylesheet" href="../css/common.css">
+        <link rel="stylesheet" href="../css/tableau.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <!-- Javascript -->
         <link rel="stylesheet" href="../js/common.js">
@@ -33,8 +34,14 @@
                 </a>
             </div>
         </nav>
-        <div>
+
+        <div class="tableau">
+            <h1>Tableau de synthèse</h1>
+            <div class="pdfClass">
+                <embed src="../asset/synthese.pdf" type="application/pdf" width="100%" height="100%">
+            </div>
         </div>
+
     </body>
     
     <footer class="d-flex justify-content-center prettyFooter">
