--- a/html/projet.html
+++ b/html/projet.html
@@ -17,7 +17,7 @@
         <nav id='menu' class="menuBack menuScroll">
             <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
             <ul>
-                <li><a href='../html/acceuil.html'>Acceuil</a></li>
+                <li><a href='../acceuil.html'>Acceuil</a></li>
                 <li><a href='../html/profil.html'>Mon profil</a></li>
                 <li><a href='../html/bts.html'>BTS SIO</a></li>
                 <li><a href='../html/veille.html'>Veilles</a>
@@ -36,14 +36,32 @@
         </nav>
         
         <div class="projet">
-            <!-- <div className="container">
-                <div className="teamUn">
-                    <p>Titre</p>
+            <div class="veilleGlass">
+                <h1>Qu'est-ce que les AP?</h1>
+                <p>Les AP (Ateliers de Professionnalisation) sont des travaux en groupe de 4 à 5 personnes 
+                (répartis selon la spécialité choisie à partir du deuxième semestre). 
+                Ils permettent de mettre en situation les élèves selon des contextes qu'ils pourraient rencontrer dans le monde professionnel.</p>
+            </div>
+
+            <div class="adjust parent">
+                <div class="veilleGlass div1">
+                    <div class="d-flex justify-content-center align-items-center colomn">
+                        <h1>Entreprise fictif</h1>
+                        <a href="https://github.com/L-Paillet/entrepriseFictif" crossorigin="anonymous">
+                            <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
+                        </a>
+                    </div>
                 </div>
-                <div className="teamDeux">
-                    <p>Titre2</p>
+
+                <div class="veilleGlass div2">
+                    <div class="d-flex justify-content-center align-items-center colomn">
+                        <h1>Association M2L</h1>
+                        <a href="https://github.com/Arthurbsnrd/M2L" crossorigin="anonymous">
+                            <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
+                        </a>
+                    </div>
                 </div>
-            </div> -->
+            </div>
         </div>
     </body>
 
