--- a/html/tableau.html
+++ b/html/tableau.html
@@ -17,7 +17,7 @@
         <nav id='menu' class="menuBack menuScroll">
             <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
             <ul>
-                <li><a href='../html/acceuil.html'>Acceuil</a></li>
+                <li><a href='../acceuil.html'>Acceuil</a></li>
                 <li><a href='../html/profil.html'>Mon profil</a></li>
                 <li><a href='../html/bts.html'>BTS SIO</a></li>
                 <li><a href='../html/veille.html'>Veilles</a>
@@ -38,7 +38,7 @@
         <div class="tableau">
             <h1>Tableau de synthèse</h1>
             <div class="pdfClass">
-                <embed src="../asset/synthese.pdf" type="application/pdf" width="100%" height="100%">
+                <embed src="../asset/tableauE4.pdf" type="application/pdf" width="100%" height="100%">
             </div>
         </div>
 
