--- a/html/veille.html
+++ b/html/veille.html
@@ -17,7 +17,7 @@
         <nav id='menu' class="menuBack menuScroll">
             <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
             <ul>
-                <li><a href='../html/acceuil.html'>Acceuil</a></li>
+                <li><a href='../acceuil.html'>Acceuil</a></li>
                 <li><a href='../html/profil.html'>Mon profil</a></li>
                 <li><a href='../html/bts.html'>BTS SIO</a></li>
                 <li><a href='../html/veille.html'>Veilles</a>
@@ -50,19 +50,43 @@
 
             <div class="veilleGlass adjust">
                 <h1>Sujets de la veille technologique</h1>
-               <p>Pour ma veille j'ai décidé d'approcher les sujets suivants, le framework Angular et (RGPD? / Blockchain?). 
+               <p>Pour ma veille j'ai décidé d'approcher les sujets suivants, le framework Angular et le RGPD (Règlement général sur la protection des données). 
                 J'ai mis en place plusieurs outils pour suivre les informations les plus récentes sur le sujet.</p>
                 <div class="gridOutil">
                     <div class="outil1">
-                        <div class="nameClass">Google Alert</div>
+                        <div class="nameClass">
+                            Google Alert
+                            <p class="adjustText">Angular.io</p>
+                            <p>RGDP - google actualité</p>
+                        </div>
+    
                     </div>
+
                     <div class="outil2">
-                        <div class="nameClass">Feedly</div>
+                        <div class="nameClass">
+                            Feedly
+                            <p class="adjustText">Angular Blog</p>
+                            <p>Angular</p>
+                            <p>RGPD</p>
+                            <p>Le Net Expert</p>
+                        </div>
                     </div>
                 </div>
-               
             </div>
 
+            <div class="veilleGlass adjust">
+                <h2>Qu'est-ce qu'Angular?</h2>
+                <p>Angular est un framework open source basé sur typescript qui permet de créer des applications web monopage 
+                    permettant de fluidifier l’expérience utilisateur et d’éviter les chargements de pages à chaque nouvelle action. </p>
+            </div>
+
+            <div class="veilleGlass adjust">
+                <h1>Qu'est-ce que le RGPD?</h1>
+                <p>Le RGPD ou GDPR « General Data Protection Regulation » en anglais, 
+                    a pour principaux objectifs du RGPD sont d'accroître à la fois la protection 
+                    des personnes concernées par un traitement de leurs données
+                    à caractère personnel et la responsabilisation des acteurs de ce traitement. </p>
+            </div>
         </div>
     </body>
 
