--- a/html/profil.html
+++ b/html/profil.html
@@ -18,7 +18,7 @@
         <nav id='menu' class="menuBack menuScroll">
             <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
             <ul>
-                <li><a href='../html/acceuil.html'>Acceuil</a></li>
+                <li><a href='../acceuil.html'>Acceuil</a></li>
                 <li><a href='../html/profil.html'>Mon profil</a></li>
                 <li><a href='../html/bts.html'>BTS SIO</a></li>
                 <li><a href='../html/veille.html'>Veilles</a>
@@ -36,7 +36,8 @@
             </div>
         </nav>
         <!-- profil -->
-        <div class="profil">
+        <div class="profil ">
+            <div class="veilleGlass adjust">
                 <h1 class="d-flex justify-content-center">Présentation</h1>
                 <p class="d-flex justify-content-center textPresentation">
                     Bienvenu sur mon portefolio, je m'appelle Laura Paillet et je suis étudiante à l'école IPSSI à SQY, en deuxième année 
@@ -45,6 +46,8 @@
                     Je fais ma deuxième année de BTS en alternance dans l'ESN Karoil, spécialisé dans les nouvelles technologies et l'informatique, 
                     et ai déjà participé à quelques projets au sein de l'entreprise.
                 </p>
+            </div>
+            <div class="veilleGlass adjust">
                 <h2 class="d-flex justify-content-center">Mon projet professionnel:</h2>
                 <p class="d-flex justify-content-center textPresentation">
                     J'aimerais l'année prochaine, continuais mes études sur un Bachelor Développement fullstack & DevOps et 
@@ -52,7 +55,8 @@
                     <br>
                     Par la suite j'aimerais continuer mes études sur un mastère dev, data et IA.
                 </p>
-
+            </div>
+            <div class="veilleGlass adjust">
                 <h2 class="d-flex justify-content-center competenceTitre">Mes compétences:</h2>
 
                 <!-- Progress Bar -->
@@ -111,6 +115,7 @@
                         </div>
                     </div>
                 </div>
+            
 
                 <div class="outcastParent">
                     <!-- PYTHON / JS -->
@@ -141,6 +146,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
 
             
