--- a/html/bts.html
+++ b/html/bts.html
@@ -45,7 +45,7 @@
                         </h1>
                         <p class="ajustementText">
                             Le BTS Services informatiques aux Organisations (SIO) est un diplôme reconnu par l’état de niveau Bac+2.
-                            Il comporte deux option permettant de se spécialiser: 
+                            Il comporte deux option permettant de se spécialiser, les deux comportants des notions de cybersécurité: 
                             <br>
                             - Solutions Logicielles et Applications Métier (SLAM) 
                             <br>
