--- a/html/bts.html
+++ b/html/bts.html
@@ -17,7 +17,7 @@
         <nav id='menu' class="menuBack menuScroll">
             <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
             <ul>
-                <li><a href='../acceuil.html'>Acceuil</a></li>
+                <li><a href='../index.html'>Acceuil</a></li>
                 <li><a href='../html/profil.html'>Mon profil</a></li>
                 <li><a href='../html/bts.html'>BTS SIO</a></li>
                 <li><a href='../html/veille.html'>Veilles</a>
