ajout cv + correction

--- a/html/profil.html
+++ b/html/profil.html
@@ -148,7 +148,9 @@
                 </div>
             </div>
 
-
+            <div class="pdfClass">
+                <embed src="../asset/cv2023.pdf" type="application/pdf" width="100%" height="100%">
+            </div>
             
         </div>
     </body>
