--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <h1>Laura PAILLET</h1>
                 <p>BTS SIO option SLAM</p>
                 <div class="btnShortcut">
-                    <button class="btn-grad"> <a class="linkButton" href="../html/profil.html">Profil</a> </button>
-                    <button class="btn-grad"> <a class="linkButton" href="../html/tableau.html">Tableau</a> </button>
+                    <a class="linkButton" href="../html/profil.html"> <button class="btn-grad"> Profil </button></a>
+                    <a class="linkButton" href="../html/tableau.html"></a><button class="btn-grad"> Tableau </button></a>
                 </div>
             </div>
         </div>
