--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <nav id='menu' class="menuBack menuScroll">
             <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
             <ul>
-                <li><a href='../index.html'>Acceuil</a></li>
-                <li><a href='../html/profil.html'>Mon profil</a></li>
-                <li><a href='../html/bts.html'>BTS SIO</a></li>
-                <li><a href='../html/veille.html'>Veilles</a>
-                <li><a href='../html/projet.html'>Projet</a>
-                <li><a href='../html/tableau.html'>Tableau de synthèse</a></li>
+                <li><a href='index.html'>Acceuil</a></li>
+                <li><a href='./html/profil.html'>Mon profil</a></li>
+                <li><a href='./html/bts.html'>BTS SIO</a></li>
+                <li><a href='./html/veille.html'>Veilles</a>
+                <li><a href='./html/projet.html'>Projet</a>
+                <li><a href='./html/tableau.html'>Tableau de synthèse</a></li>
             </ul>
             
             <div class="d-flex justify-content-end">
