--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             
             <div class="d-flex justify-content-end">
                 <a href="https://github.com/L-Paillet" crossorigin="anonymous">
-                    <img src="../asset/github.png" alt="portfolio-github" srcset="" class="logoGit">
+                    <img src="../HexaPortFolio/asset/github.png" alt="portfolio-github" srcset="" class="logoGit">
                 </a>
                 <a href="https://www.linkedin.com/in/laura-paillet-669889223/" crossorigin="anonymous">
-                    <img src="../asset/linkedinLogo.png" alt="portfolio-linkedin" srcset="" class="logoDin">
+                    <img src="../HexaPortFolio/asset/linkedinLogo.png" alt="portfolio-linkedin" srcset="" class="logoDin">
                 </a>
             </div>
         </nav>
