--- a/html/profil.html
+++ b/html/profil.html
@@ -149,7 +149,7 @@
             </div>
 
             <div class="pdfClass">
-                <embed src="../asset/cv2023.pdf" type="application/pdf" width="100%" height="100%">
+                <embed src="../asset/paillet-cv-fev.pdf" type="application/pdf" width="100%" height="100%">
             </div>
             
         </div>
