Gon' pop like trouble breaking

--- a/html/projet.html
+++ b/html/projet.html
@@ -26,10 +26,10 @@
             </ul>
 
             <div class="d-flex justify-content-end">
-                <a href="https://github.com/L-Paillet" crossorigin="anonymous">
+                <a href="https://github.com/L-Paillet" target="_blank" crossorigin="anonymous">
                     <img src="../asset/github.png" alt="portfolio-github" srcset="" class="logoGit">
                 </a>
-                <a href="https://www.linkedin.com/in/laura-paillet-669889223/" crossorigin="anonymous">
+                <a href="https://www.linkedin.com/in/laura-paillet-669889223/" target="_blank" crossorigin="anonymous">
                     <img src="../asset/linkedinLogo.png" alt="portfolio-linkedin" srcset="" class="logoDin">
                 </a>
             </div>
