Cool shade, stunner, yeah, I owe it all to my mother

--- a/html/profil.html
+++ b/html/profil.html
@@ -44,13 +44,14 @@
                     de BTS SIO option Solutions Logicielles et Applications Métier (SLAM). 
                     <br>
                     Je fais ma deuxième année de BTS en alternance dans l'ESN Karoil, spécialisé dans les nouvelles technologies et l'informatique, 
-                    et ai déjà participé à quelques projets au sein de l'entreprise.
+                    et ai déjà participé à quelques projets au sein de l'entreprise, tel que sur le site vitrine.
                 </p>
+                <a href="https://www.karoil.fr/" target="_blank"></a>
             </div>
             <div class="veilleGlass adjust">
                 <h2 class="d-flex justify-content-center">Mon projet professionnel:</h2>
                 <p class="d-flex justify-content-center textPresentation">
-                    J'aimerais l'année prochaine, continuais mes études sur un Bachelor Développement fullstack & DevOps et 
+                    J'aimerais l'année prochaine, continuer mes études sur un Bachelor Développement fullstack & DevOps et 
                     le faire en alternance afin de continuer à acquérir de l'expérience. 
                     <br>
                     Par la suite j'aimerais continuer mes études sur un mastère dev, data et IA.
