hot like summer yeah

--- a/html/profil.html
+++ b/html/profil.html
@@ -44,7 +44,8 @@
                     de BTS SIO option Solutions Logicielles et Applications Métier (SLAM). 
                     <br>
                     Je fais ma deuxième année de BTS en alternance dans l'ESN Karoil, spécialisé dans les nouvelles technologies et l'informatique, 
-                    et ai déjà participé à quelques projets au sein de l'entreprise, tel que sur le site vitrine.
+                    et ai déjà participé à quelques projets au sein de l'entreprise, tel que sur le site vitrine. 
+                    Le rythme de l'alternance étant 2 semaines en entreprise et 2 semaines en école.
                 </p>
                 <a href="https://www.karoil.fr/" target="_blank"></a>
             </div>
