--- a/html/veille.html
+++ b/html/veille.html
@@ -51,7 +51,10 @@
             <div class="veilleGlass adjust">
                 <h1>Sujets de la veille technologique</h1>
                <p>Pour ma veille j'ai décidé d'approcher les sujets suivants, le framework Angular et le RGPD (Règlement général sur la protection des données). 
-                J'ai mis en place plusieurs outils pour suivre les informations les plus récentes sur le sujet.</p>
+                    J'ai mis en place plusieurs outils pour suivre les informations les plus récentes sur le sujet, notamment grâce à des 
+                    flux RSS (Really Simple Syndication). Un flux RSS permet de suivre un flux d'informations sans avoir à se rendre sur le site en question.
+                    Le contenu de ce flux est mis est automatiquement généré en fonction des mises à jour du site en question.
+                </p>
                 <div class="gridOutil">
                     <div class="outil1">
                         <div class="nameClass">
