i'm making you sweat like that

--- a/html/veille.html
+++ b/html/veille.html
@@ -80,7 +80,9 @@
             <div class="veilleGlass adjust">
                 <h2>Qu'est-ce qu'Angular?</h2>
                 <p>Angular est un framework open source basé sur typescript qui permet de créer des applications web monopage 
-                    permettant de fluidifier l’expérience utilisateur et d’éviter les chargements de pages à chaque nouvelle action. </p>
+                    permettant de fluidifier l’expérience utilisateur et d’éviter les chargements de pages à chaque nouvelle action. 
+                    J'ai choisi ce framework car c'est celui avec lequel je travail en entreprise pendant mon alternance en 2ème année de BTS SIO.
+                </p>
             </div>
 
             <div class="veilleGlass adjust">
@@ -88,7 +90,9 @@
                 <p>Le RGPD ou GDPR « General Data Protection Regulation » en anglais, 
                     a pour principaux objectifs du RGPD sont d'accroître à la fois la protection 
                     des personnes concernées par un traitement de leurs données
-                    à caractère personnel et la responsabilisation des acteurs de ce traitement. </p>
+                    à caractère personnel et la responsabilisation des acteurs de ce traitement. La protection des données est un enjeu majeur dans le monde
+                    d'aujourd'hui où tout le monde est toujours très connecté.
+                </p>
             </div>
         </div>
     </body>
