So, watch me bring the fire and set the night alight

--- a/html/projet.html
+++ b/html/projet.html
@@ -37,17 +37,16 @@
         
         <div class="projet">
             <div class="veilleGlass">
-                <h1>Qu'est-ce que les AP?</h1>
-                <p>Les AP (Ateliers de Professionnalisation) sont des travaux en groupe de 4 à 5 personnes 
-                (répartis selon la spécialité choisie à partir du deuxième semestre). 
-                Ils permettent de mettre en situation les élèves selon des contextes qu'ils pourraient rencontrer dans le monde professionnel.</p>
+                <h1>Qu'els sont les projets vu en cours d'année?</h1>
+                <p>Nous avons travaillé en groupe de 2 sur les AP (Ateliers de Professionnalisation).
+                Les AP permettent de mettre en situation les élèves selon des contextes qu'ils pourraient rencontrer dans le monde professionnel.</p>
             </div>
 
             <div class="adjust parent">
                 <div class="veilleGlass div1">
                     <div class="d-flex justify-content-center align-items-center colomn">
                         <h1>Entreprise fictif</h1>
-                        <a href="https://github.com/L-Paillet/entrepriseFictif" crossorigin="anonymous">
+                        <a href="https://github.com/L-Paillet/entrepriseFictif" target="_blank" crossorigin="anonymous">
                             <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
                         </a>
                     </div>
@@ -56,9 +55,26 @@
                 <div class="veilleGlass div2">
                     <div class="d-flex justify-content-center align-items-center colomn">
                         <h1>Association M2L</h1>
-                        <a href="https://github.com/Arthurbsnrd/M2L" crossorigin="anonymous">
-                            <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
-                        </a>
+                        <div class="d-flex justify-content-center align-items-center">
+                            <div class="d-flex justify-content-center align-items-center colomn">
+                                <h2>Front end</h2>
+                                <a href="https://github.com/Arthurbsnrd/M2L" target="_blank" crossorigin="anonymous">
+                                    <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
+                                </a>
+                            </div>
+                            <div class="d-flex justify-content-center align-items-center colomn">
+                                <h2>Back end</h2>
+                                <a href="https://github.com/L-Paillet/backM2L" target="_blank" crossorigin="anonymous">
+                                    <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
+                                </a>
+                            </div>
+                            <div class="d-flex justify-content-center align-items-center colomn">
+                                <h2>Documentation</h2>
+                                <a href="https://github.com/L-Paillet/backM2L" target="_blank" crossorigin="anonymous">
+                                    <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
