--- a/html/projet.html
+++ b/html/projet.html
@@ -57,21 +57,21 @@
                         <h1>Association M2L</h1>
                         <div class="d-flex justify-content-center align-items-center">
                             <div class="d-flex justify-content-center align-items-center colomn">
-                                <h2>Front end</h2>
+                                <h4>Front end</h4>
                                 <a href="https://github.com/Arthurbsnrd/M2L" target="_blank" crossorigin="anonymous">
                                     <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
                                 </a>
                             </div>
                             <div class="d-flex justify-content-center align-items-center colomn">
-                                <h2>Back end</h2>
+                                <h4>Back end</h4>
                                 <a href="https://github.com/L-Paillet/backM2L" target="_blank" crossorigin="anonymous">
                                     <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
                                 </a>
                             </div>
                             <div class="d-flex justify-content-center align-items-center colomn">
-                                <h2>Documentation</h2>
+                                <h4>Documentation</h4>
                                 <a href="https://github.com/L-Paillet/backM2L" target="_blank" crossorigin="anonymous">
-                                    <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
+                                    <img class="gitLogo" src="../asset/clipboard.svg" alt="github portfolio-github bts-sio">
                                 </a>
                             </div>
                         </div>
