king kong, kick the drum

--- a/html/projet.html
+++ b/html/projet.html
@@ -71,7 +71,7 @@
                             <div class="d-flex justify-content-center align-items-center colomn">
                                 <h4>Documentation</h4>
                                 <a href="https://github.com/L-Paillet/backM2L" target="_blank" crossorigin="anonymous">
-                                    <img class="gitLogo" src="../asset/clipboard.svg" alt="github portfolio-github bts-sio">
+                                    <img class="gitLogo" src="../asset/clipboard.svg" alt="github portfolio-github documentation bts-sio">
                                 </a>
                             </div>
                         </div>
