--- a/html/profil.html
+++ b/html/profil.html
@@ -10,7 +10,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <!-- Javascript -->
         <link rel="stylesheet" href="../js/common.js">
-        <title>Acceuil</title>
+        <title>Profil</title>
     </head>
     
     <body>
@@ -18,7 +18,7 @@
         <nav id='menu' class="menuBack menuScroll">
             <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
             <ul>
-                <li><a href='../index.html'>Acceuil</a></li>
+                <li><a href='../index.html'>Accueil</a></li>
                 <li><a href='../html/profil.html'>Mon profil</a></li>
                 <li><a href='../html/bts.html'>BTS SIO</a></li>
                 <li><a href='../html/veille.html'>Veilles</a>
