fautes de frappe

--- a/html/projet.html
+++ b/html/projet.html
@@ -20,8 +20,9 @@
                 <li><a href='../index.html'>Accueil</a></li>
                 <li><a href='../html/profil.html'>Mon profil</a></li>
                 <li><a href='../html/bts.html'>BTS SIO</a></li>
-                <li><a href='../html/veille.html'>Veilles</a>
-                <li><a href='../html/projet.html'>Projet</a>
+                <li><a href='../html/veille.html'>Veilles</a></li>
+                <li><a href='../html/projet.html'>Projet</a></li>
+                <li><a href='../html/documentations.html'>Documentations</a></li>
                 <li><a href='../html/tableau.html'>Tableau de synthèse</a></li>
             </ul>
 
@@ -37,7 +38,7 @@
         
         <div class="projet">
             <div class="veilleGlass">
-                <h1>Qu'els sont les projets vu en cours d'année?</h1>
+                <h1>Quels sont les projets vu en cours d'année?</h1>
                 <p>Nous avons travaillé en groupe de 2 sur les AP (Ateliers de Professionnalisation).
                 Les AP permettent de mettre en situation les élèves selon des contextes qu'ils pourraient rencontrer dans le monde professionnel.</p>
             </div>
