--- a/html/tableau.html
+++ b/html/tableau.html
@@ -20,8 +20,9 @@
                 <li><a href='../index.html'>Accueil</a></li>
                 <li><a href='../html/profil.html'>Mon profil</a></li>
                 <li><a href='../html/bts.html'>BTS SIO</a></li>
-                <li><a href='../html/veille.html'>Veilles</a>
-                <li><a href='../html/projet.html'>Projet</a>
+                <li><a href='../html/veille.html'>Veilles</a></li>
+                <li><a href='../html/projet.html'>Projet</a></li>
+                <li><a href='../html/documentations.html'>Documentations</a></li>
                 <li><a href='../html/tableau.html'>Tableau de synthèse</a></li>
             </ul>
 
