--- a/html/projet.html
+++ b/html/projet.html
@@ -45,36 +45,46 @@
 
             <div class="adjust parent">
                 <div class="veilleGlass div1">
-                    <div class="d-flex justify-content-center align-items-center colomn">
-                        <h1>Entreprise fictif</h1>
-                        <a href="https://github.com/L-Paillet/entrepriseFictif" target="_blank" crossorigin="anonymous">
-                            <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
-                        </a>
+                    <div class="d-flex justify-content-center align-items-center flex-column">
+                        <h1>Mercedes Deve - Mention legale</h1>
+                        <div class="d-flex justify-content-evenly align-items-center w-100">
+                            <a href="https://github.com/L-Paillet/entrepriseFictif" target="_blank" crossorigin="anonymous">
+                                <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
+                            </a>
+
+                            <a href="https://l-paillet.github.io/entrepriseFictif/" target="_blank" crossorigin="anonymous">
+                                <img class="gitLogo" src="../asset/web.png" alt="github portfolio-github bts-sio">
+                            </a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="veilleGlass div2">
-                    <div class="d-flex justify-content-center align-items-center colomn">
+                    <div class="d-flex justify-content-center align-items-center flex-column">
                         <h1>Association M2L</h1>
-                        <div class="d-flex justify-content-center align-items-center">
-                            <div class="d-flex justify-content-center align-items-center colomn">
-                                <h4>Front end</h4>
+                        <div class="d-flex justify-content-evenly align-items-center w-100">
+
+                            <div class="d-flex justify-content-center align-items-center flex-column">
+                                <h4>Front end </h4>
                                 <a href="https://github.com/Arthurbsnrd/M2L" target="_blank" crossorigin="anonymous">
                                     <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
                                 </a>
                             </div>
-                            <div class="d-flex justify-content-center align-items-center colomn">
-                                <h4>Back end</h4>
+
+                            <div class="d-flex justify-content-center align-items-center flex-column">
+                                <h4>Back end </h4>
                                 <a href="https://github.com/L-Paillet/backM2L" target="_blank" crossorigin="anonymous">
                                     <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
                                 </a>
                             </div>
-                            <div class="d-flex justify-content-center align-items-center colomn">
+
+                            <div class="d-flex justify-content-center align-items-center flex-column">
                                 <h4>Documentation</h4>
                                 <a href="https://github.com/L-Paillet/backM2L" target="_blank" crossorigin="anonymous">
-                                    <img class="gitLogo" src="../asset/clipboard.svg" alt="github portfolio-github documentation bts-sio">
+                                    <img class="gitLogo" src="../asset/Document-icon1.png" alt="github portfolio-github bts-sio">
                                 </a>
                             </div>
+
                         </div>
                     </div>
                 </div>
