--- a/html/documentations.html
+++ b/html/documentations.html
@@ -67,6 +67,9 @@
                     <li>
                         <a href="../pdf/mise en place d'un service.pdf" target="_blank" rel="noopener noreferrer">Mise en place d'un service</a>
                     </li>
+                    <li>
+                        <a href="../pdf/inventaireDoc.pdf" target="_blank" rel="noopener noreferrer">Documentation Inventaire</a>
+                    </li>
                 </ul>
             </div>
         </div>
