--- a/html/documentations.html
+++ b/html/documentations.html
@@ -39,7 +39,7 @@
         <div class="docu">
             <div class="veilleGlass">
                 <h1>Documentations</h1>
-                <ul>
+                <ul class="listStyle">
                     <li>
                         <a href="../pdf/Doc identité pro.pdf" target="_blank" rel="noopener noreferrer">Identité Professionnelle</a>
                     </li>
