--- a/html/projet.html
+++ b/html/projet.html
@@ -80,7 +80,7 @@
 
                             <div class="d-flex justify-content-center align-items-center flex-column">
                                 <h4>Documentation</h4>
-                                <a href="https://github.com/L-Paillet/backM2L" target="_blank" crossorigin="anonymous">
+                                <a href="https://drive.google.com/drive/folders/1jsCBtpaR2_xN_lKc8R_vDpBxXKmTk8a4?usp=sharing" target="_blank" crossorigin="anonymous">
                                     <img class="gitLogo" src="../asset/Document-icon1.png" alt="github portfolio-github bts-sio">
                                 </a>
                             </div>
