--- a/html/veille.html
+++ b/html/veille.html
@@ -95,6 +95,10 @@
                     d'aujourd'hui où tout le monde est toujours très connecté.
                 </p>
             </div>
+<!-- article sur veille -->
+            <div>
+                
+            </div>
         </div>
     </body>
 
